[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-system-common-library"
version = "0.1.0"
description = "Build System Common Library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Maxim Petukhov", email = "mpetuhov@almalinux.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]

builder = [
    "pydantic==2.9.2",
    "pycurl==7.45.3",
    "plumbum==1.9.0",
    "lmdb==1.5.1",
    "lxml==5.3.0",
    "pyyaml==6.0.2",
    "configparser==7.1.0",
    "GitPython==3.1.43",
    "pygments==2.18.0",
    "python-rpm-spec==0.15.0",
    "requests==2.32.3",
]

signer = [
    "pydantic==2.9.2",
    "pycurl==7.45.3",
    "plumbum==1.9.0",
    "python-gnupg==0.5.3",
    "pgpy==0.6.0",
    "pexpect==4.9.0",
    "requests==2.32.3",
]

file-utils = [
    "pycurl==7.45.3",
    "plumbum==1.9.0",
    "requests==2.32.3",
]

dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pyfakefs==5.6.0",
    "black==24.8.0",
    "pylint==3.3.1",
    "isort[colors]==5.13.2",
    "bandit[toml]==1.7.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
split_on_trailing_comma = true

[tool.black]
line-length = 80
skip-string-normalization = true
# see https://black.readthedocs.io/en/stable/the_black_code_style/future_style.html#preview-style
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]

[tool.pylint]
max-line-length = 80

# Minimum line length for functions/classes that require docstrings
docstring-min-length = 50

# https://pylint.readthedocs.io/en/stable/user_guide/checkers/features.html
disable = [
    "C0114", # missing-module-docstring
    "R0902", # too-many-instance-attributes
    "R0913", # too-many-arguments
    "W1514", # unspecified-encoding
]

[tool.coverage.run]
source = ['.']

[tool.coverage.report]
skip_empty = true
include = ['src/common_library/*']

[tool.pytest.ini_options]
pythonpath = '.'
testpaths = ['tests']
